--- a/index.html
+++ b/index.html
@@ -1,44 +1,44 @@
-<html>
+<!doctype html>
+<html lang="en" class="h-100">
 
 <head>
 
-<title>Lakera AI</title>
+	<!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<style type="text/css">
-	
-body {
-	background-color: #212121;
-	color: #fff;
-	font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
-}
+	<title>Lakera AI</title>
 
-.container {
-  height: 100%;
-  width: 100%;
-  text-align: center;
-}
+	<!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-.text {
-	position: relative;
-	top: 50%;
-	width: 100%;
-	text-align: center;
-	transform: translateY(-50%);
-	-webkit-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	font-size: 24px;
-}
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500&display=swap" rel="stylesheet">
 
-</style>
+	<style type="text/css">
+		
+	body {
+		font-family: 'Montserrat', sans-serif;
+	}
+
+	</style>
 
 </head>
 
-<body>
-	<div class="container">
-		<p class="text">
-		Launching soon!<br>
-		info@lakera.ai
-		</p>
-	</div>
+<body class="d-flex h-100 text-center text-white bg-dark">
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+  <header class="mb-auto">
+  </header>
+
+  <main class="px-3">
+    <h2>Mission-critical AI for healthcare, finance, and transportation</h2>
+	<p class="lead">info@lakera.ai</p></h1>
+  </main>
+
+  <footer class="mt-auto text-white-50">
+    <p>Copyright © 2021 - Lakera AI</p>
+  </footer>
+</div>
 </body>
+
 </html>
