--- a/index.html
+++ b/index.html
@@ -2,12 +2,30 @@
 <html lang="en" class="h-100">
 
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-E17DZ2LDGL"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-E17DZ2LDGL');
+	</script>
 
 	<!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Lakera AI</title>
+	<meta name="description" content="Safe, robust, trustworthy AI for mission-critical applications in healthcare, finance, and transportation. Made in Zurich, Switzerland.">
+    <meta property="og:title" content="Lakera AI" />
+    <meta property="og:url" content="https://lakera.ai" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Safe, robust, trustworthy AI for mission-critical applications in healthcare, finance, and transportation. Made in Zurich, Switzerland." />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@LakeraAI" />
+    <meta name="twitter:title" content="Lakera AI" />
+    <meta name="twitter:description" content="Safe, robust, trustworthy AI for mission-critical applications in healthcare, finance, and transportation. Made in Zurich, Switzerland." />
 
 	<!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
