--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500&display=swap" rel="stylesheet">
 
+	<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+
 	<style type="text/css">
 		
 		body {
@@ -71,7 +73,7 @@
   <main class="px-3">
   	<img class="logo" src="img/logo.png">
     <h2>Powering mission-critical AI</h2>
-	<a class="btn btn-primary" href="mailto:info@lakera.ai" onlick="javascript:gtag('event', 'request_info', {'event_category' : 'engagement', 'event_label' : 'method'});">Request Information</a>
+	<a class="btn btn-primary" href="mailto:info@lakera.ai" onlick="gtag('event', 'request_info', {'event_category' : 'engagement', 'event_label' : 'method'});">Request Information</a>
   </main>
 
   <footer class="mt-auto">
