--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Lakera AI</title>
-	<meta name="description" content="Mission-critical AI for healthcare, finance, and transportation Made in Zurich, Switzerland.">
+	<meta name="description" content="Powering mission-critical AI. Made in Zurich, Switzerland.">
     <meta property="og:title" content="Lakera AI" />
     <meta property="og:url" content="https://lakera.ai" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Mission-critical AI for healthcare, finance, and transportation Made in Zurich, Switzerland." />
+    <meta property="og:description" content="Powering mission-critical AI. Made in Zurich, Switzerland." />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@LakeraAI" />
     <meta name="twitter:title" content="Lakera AI" />
-    <meta name="twitter:description" content="Mission-critical AI for healthcare, finance, and transportation Made in Zurich, Switzerland." />
+    <meta name="twitter:description" content="Powering mission-critical AI. Made in Zurich, Switzerland." />
 
 	<!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
