Changes email address

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <main class="px-3">
   	<img class="logo" src="img/logo.png">
     <h2>Powering mission-critical AI</h2>
-	<a class="btn btn-primary" href="mailto:info@lakera.ai" onlick="gtag('event', 'request_info', {'event_category' : 'engagement', 'event_label' : 'method'});">Request Information</a>
+	<a class="btn btn-primary" href="mailto:earlyaccess@lakera.ai" onlick="gtag('event', 'request_info', {'event_category' : 'engagement', 'event_label' : 'method'});">Get Early Access</a>
   </main>
 
   <footer class="mt-auto">
